# pololu-jrk-g2-software

./: .gitignore  BUILDING.md  CMakeLists.txt  LICENSE.txt  LICENSE_dejavu.txt  LICENSE_qcustomplot.txt  README.md  feedback_wizard_plan.txt
bootloader/: bootloader.cpp  bootloader.h  bootloader_data.cpp
cli/: cli.cpp  cli.h  cli_info.rc.in  device_selector.h  print_status.cpp
drivers/: jrk-g2-bootloader.inf  jrk-g2-serial.inf  jrk-g2.inf  pololu.cat
gui/: CMakeLists.txt  gui_info.rc.in  main.cpp  main_controller.cpp  main_controller.h
gui/qt/: altwindow.h  app_icns.qrc  app_ico.qrc  bootloader_window.cpp  bootloader_window.h  feedback_wizard.cpp  feedback_wizard.h  graph_widget.cpp  graph_widget.h  graph_window.cpp  graph_window.h  graphwindow.h  input_wizard.cpp  input_wizard.h  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  message_box.h  nice_spin_box.cpp  nice_spin_box.h  nice_wizard_page.h  pid_constant_control.cpp  pid_constant_control.h  popout_window.cpp  popout_window.h  qcustomplot.cpp  qcustomplot.h  reset_arrow.qrc  resources.qrc  target_slider.cpp  target_slider.h  util.h  wizard_button_text.h
images/: reset_arrow.icns
include/: jrk.h  jrk.hpp  jrk_protocol.h  string_to_int.h  to_string.h  uint16_range.h
lib/: CMakeLists.txt  jrk_baud_rate.c  jrk_current.c  jrk_device.c  jrk_diagnose.c  jrk_error.c  jrk_get_overridable_settings.c  jrk_get_settings.c  jrk_handle.c  jrk_internal.h  jrk_names.c  jrk_overridable_settings.c  jrk_set_overridable_settings.c  jrk_set_settings.c  jrk_settings.c  jrk_settings_fix.c  jrk_settings_read_from_string.c  jrk_settings_to_string.c  jrk_string.c  jrk_summarize.c  jrk_variables.c  lib.pc.in  lib_info.rc.in
nix/: build.nix  builder.sh  license_builder.rb  linux_installer_builder.rb  macos_installer_builder.rb  windows_installer_builder.rb
ruby/: generate.rb  generate_code.rb  generate_current_tables.rb  generate_overridable_settings.rb  generate_settings.rb  generate_variables.rb  overridable_settings.rb  settings.rb  variables.rb  vilim_table.rb
src/: altwindow.cpp  altwindow.h  graphwindow.cpp  graphwindow.h  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h
